--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,11 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+		    <groupId>com.github.chen0040</groupId>
+		    <artifactId>java-magento-client</artifactId>
+		    <version>1.0.12</version>
+		</dependency>
 	
 	</dependencies>
 
