--- a/pom.xml
+++ b/pom.xml
@@ -30,9 +30,24 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		<dependency>
+		    <groupId>commons-net</groupId>
+		    <artifactId>commons-net</artifactId>
+		    <version>3.3</version>
+		</dependency>
+		<dependency>
+		    <groupId>com.jcraft</groupId>
+		    <artifactId>jsch</artifactId>
+		    <version>0.1.54</version>
+		</dependency>
+		<dependency>
 		    <groupId>javax.xml.parsers</groupId>
 		    <artifactId>jaxp-api</artifactId>
 		    <version>1.4.5</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.imgscalr</groupId>
+		    <artifactId>imgscalr-lib</artifactId>
+		    <version>4.2</version>
 		</dependency>
 		<dependency>
 		    <groupId>org.simpleframework</groupId>
