--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,10 @@
 		    <artifactId>httpclient</artifactId>
 		    <version>4.5.4</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-neo4j</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
